<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_action_apply_history"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_apply_history" />
        <item
            android:id="@+id/main_action_history"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_history" />
        <item
            android:id="@+id/main_action_teacher"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_teacher" />
        <item
            android:id="@+id/main_action_notice"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_notice" />
        <item
            android:id="@+id/main_action_modify_password"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_modify_password" />
    </group>

    <item android:title="@string/login_cancel">
        <menu>
            <item
                android:id="@+id/main_action_logout"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/login_cancel" />
        </menu>
    </item>

</menu>
